vpc-network-stack.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Creates VPC 2 Tier network environment with single AZ.

Parameters:
  stackName:
    Type: String
    Description: Stack name
    Default: dev

  pCidr:
    Type: String
    Description: Please enter CIDR Format x.x.x.x/x
    Default: 172.20.0.0/16

  privateSubnetCidr1:
    Type: String
    Description: Please enter CIDR Format x.x.x.x/x
    Default: 172.20.10.0/24

  publicSubnetCidr1:
    Type: String
    Description: Please enter CIDR Format x.x.x.x/x
    Default: 172.20.20.0/24

Resources:

  pVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: stack
          Value: !Ref stackName
      
  privateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref pVPC
      CidrBlock: !Ref privateSubnetCidr1
      AvailabilityZone: !Select [ 0, !GetAZs '' ] 
      Tags:
        - Key: stack
          Value: !Sub ${stackName}-private-AZ1
  
  publicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref pVPC
      CidrBlock: !Ref publicSubnetCidr1
      AvailabilityZone: !Select [ 0, !GetAZs '' ] 
      Tags:
        - Key: stack
          Value: !Sub ${stackName}-public-AZ1

  internetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: stack
          Value: !Ref stackName

  attachVPCGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref pVPC
      InternetGatewayId: !Ref internetGateway

  natGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: attachVPCGateway
    Properties:
      Domain: vpc

  natGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt natGateway1EIP.AllocationId
      SubnetId: !Ref publicSubnet1
      Tags:
        - Key: stack
          Value: !Sub ${stackName}-natgateway-1

  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref pVPC
      Tags:
        - Key: stcak
          Value: !Sub ${stackName}-public-route-table
  
  defaultPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref publicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway

  publicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref publicRouteTable
      SubnetId: !Ref publicSubnet1

  privateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref pVPC
      Tags:
        - Key: stack
          Value: !Sub ${stackName}-private-AZ1

  defaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref natGateway1

  privateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref privateRouteTable1
      SubnetId: !Ref privateSubnet1

  noIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "no-ingress-sg"
      GroupDescription: "Security group with no ingress rule"
      VpcId: !Ref pVPC

Outputs:
  pVPC:
    Description: A reference to the Created VPC
    Value: !Ref pVPC

  privateSubnet1:
    Description: A reference to private subnet in the 1st AZ
    Value: !Ref privateSubnet1

  publicSubnet1:
    Description: A reference to public subnet in the 1st AZ
    Value: !Ref publicSubnet1

  noIngressSecurityGroup:
    Description: Security group with no ingress rule
    Value: !Ref noIngressSecurityGroup
